--- a/CoordinateTransformations.ipynb
+++ b/CoordinateTransformations.ipynb
@@ -49,7 +49,7 @@
     "represent 2D and 3D positions, directions, rigid body motion, and\n",
     "coordinate transformations. It is assumed that all students will have\n",
     "taken a course in linear algebra and can refresh themselves on basic\n",
-    "definitions. Appendix 1 reviews standard vector and matrix notation,\n",
+    "definitions. Appendix 1 reviews the standard vector and matrix notation,\n",
     "conventions, and basic identities that will be used throughout this\n",
     "book.\n",
     "\n",
@@ -94,10 +94,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$$\n",
-    "\\V{p} = \\begin{bmatrix}p_x \\\\\n",
+    "\\begin{equation*}\n",
+    "\\mathbf{p} = \\begin{bmatrix}p_x \\\\\n",
     "p_y \\end{bmatrix}\n",
-    "$$"
+    "\\end{equation*}"
    ]
   },
   {
@@ -140,11 +140,11 @@
     "$$\\V{p} = \\begin{bmatrix} p_x \\\\ p_y \\\\ p_z \\end{bmatrix}.$$\n",
     "\n",
     "In 3D the coordinate frame consists of the origin $O$ and the mutually\n",
-    "orthogonal axes $X$, $Y$, and $Z$. In this class we will use\n",
+    "orthogonal axes $X$, $Y$, and $Z$. In this book we will use\n",
     "*right-handed coordinate convention* in which the axes can be envisioned\n",
     "in the layout of the first three fingers of the right hand, suitably\n",
     "arranged at $90^\\circ$ right angles. $X$ axis corresponds to the thumb,\n",
-    "$Y$ to the index finger, and $Z$ corresponds to the middle finger.\n",
+    "$Y$ axis corresponds to the index finger, and $Z$ axis corresponds to the middle finger.\n",
     "\n",
     "### Directional quantities\n",
     "\n",
@@ -221,7 +221,7 @@
     "This definition is known as the *plane equation*, which generalizes\n",
     "lines in 2D to planes in 3D and hyperplanes in higher dimensions. Each\n",
     "of these is object of $n-1$ dimensions in an $n$-dimensional space,\n",
-    "which we call a generalized plans. A unique representation for a\n",
+    "which we call a generalized plane. A unique representation for a\n",
     "generalized plane is $\\V{x}\\cdot \\V{u} = b$ where $\\V{u}$ is a unit\n",
     "vector orthogonal to the plane known as the *normal direction* and $b$\n",
     "is a nonnegative *offset* that determines the distance away from the\n",
@@ -315,7 +315,7 @@
     "$X^\\prime$ and $Y^\\prime$ are known:\n",
     "$$\\V{p^\\prime} = p_x \\V{x^\\prime} + p_y \\V{y^\\prime} = \\begin{bmatrix}\n",
     "p_x \\cos \\theta - p_y \\sin \\theta \\\\ \n",
-    "p_x \\sin \\theta - p_y \\cos \\theta\n",
+    "p_x \\sin \\theta + p_y \\cos \\theta\n",
     "\\end{bmatrix}.$$\n",
     "\n",
     "***************\n",
@@ -441,14 +441,14 @@
     "![fig:Coordinates3D](figures/modeling/coordinate_axes_3d.png)\n",
     "\n",
     "<div style=\"text-align:center\"><a name=\"fig:Coordinates3D2\">Figure 7</a>. A 3D rotation is encoded by a $3\\times 3$ matrix whose columns\n",
-    "give the coordinates of the rotated axes *relative* to the original\n",
+    "give the coordinates of the rotated axes $\\mathit{relative}$ to the original\n",
     "axes. </div>\n",
     "\n",
     "***************\n",
     "\n",
     "This interpretation is useful when determining the coordinates\n",
-    "of a rotated point in the original reference frame: If the point is\n",
-    "given by coordinates $\\V{p} = (p_x,p_y,p_Z)$ such that\n",
+    "of a rotated point in the original reference frame: if the point is\n",
+    "given by coordinates $\\V{p} = (p_x,p_y,p_z)$ such that\n",
     "$P-O = p_x X + p_y Y + p_z Z$, then the new coordinates of $P$ relative\n",
     "to the old reference frame are given by $R \\V{p}$."
    ]
@@ -503,7 +503,7 @@
     "-   As a consequence of\n",
     "    $R(\\theta_1) R(\\theta_2) = R(\\theta_1 + \\theta_2)$, rotation by\n",
     "    angle $\\theta_1$ followed by angle $\\theta_2$ is symmetric:\n",
-    "    $R(\\theta_1) R(\\theta_2) = R(\\theta_1) R(\\theta_1)$. (Note that\n",
+    "    $R(\\theta_1) R(\\theta_2) = R(\\theta_2) R(\\theta_1)$. (Note that\n",
     "    symmetry does not generally hold in 3D!)\n",
     "\n",
     "-   A rotation and a uniform scaling.\n",
@@ -1106,7 +1106,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.5"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
