Chap3 proofread (exercises excluded) 1. 2.8 equal or identity? 2. 3 first paragraph. I didn't get the meaning of the original sentance. Is it a slang or just a typo? 3. 3.1 We can, rather than cannot, right?

--- a/CoordinateTransformations.ipynb
+++ b/CoordinateTransformations.ipynb
@@ -514,15 +514,14 @@
     "\n",
     "Rigid transformations in two dimensions have two properties:\n",
     "\n",
-    "1.  The distances between two points do not change after being\n",
+    "1.  The distance between two points do not change after being\n",
     "    transformed.\n",
     "\n",
     "2.  In 2D, the orientation and area of any triangle does not change, and\n",
-    "    in 3D, the orientation and volume of any tetrahedron of any does not\n",
+    "    in 3D, the orientation and volume of any tetrahedron does not\n",
     "    change.\n",
     "\n",
-    "The form of all rigid transforms is a rotation $R$ followed by addition\n",
-    "by an arbitrary translation $\\V{t}$: $$T(\\V{x}) = R \\V{x} + \\V{t}$$\n",
+    "The form of all rigid transforms is a rotation $R$ followed by an arbitrary translation $\\V{t}$: $$T(\\V{x}) = R \\V{x} + \\V{t}$$\n",
     "Which can be thought of applying a *rotation about the origin first*,\n",
     "and then a *translation second*. Proving that all rigid transforms have\n",
     "this form will be left as an exercise.\n",
@@ -571,7 +570,7 @@
     "\n",
     "Rigid transformations are used to represent movement of rigid bodies in\n",
     "space. If, in 2D the origin of a body moves by translation $\\V{t}$ in\n",
-    "its original reference frame and rotates by angle $R \\equiv R(\\theta)$,\n",
+    "its original reference frame and rotates by angle $R = R(\\theta)$,\n",
     "then the transformation that *converts positional coordinates from the\n",
     "new coordinate frame to the original coordinate frame* is given by\n",
     "$T_p(\\V{x}) = R \\V{x} + \\V{t}$. In other words, if $\\V{x}$ gives the\n",
@@ -606,7 +605,7 @@
     "be calculated by the rigid transform\n",
     "$$\\V{p}_W = \\begin{bmatrix}x_{1} & y_{1} \\\\ x_{2} & y_{2} \\end{bmatrix} \\V{p} + \\V{t}.$$ Hence,\n",
     "by storing $R = \\begin{bmatrix}x_{1} & y_{1} \\\\ x_{2} & y_{2} \\end{bmatrix}$ and $\\V{t}$ we can\n",
-    "perform this calculation for any point in $F$ (We remark that the matrix\n",
+    "perform this calculation for any point in $F$. (We remark that the matrix\n",
     "is a rotation because $X$ and $Y$ are both orthogonal and $Y$ is\n",
     "$90^\\circ$ ccw from $X$.) The information stored for a 3D coordinate\n",
     "frame is similarly a rotation matrix $R$ and origin coordinates $\\V{t}$.\n",
@@ -647,7 +646,7 @@
     "$$\\hat{\\V{v}} = \\begin{bmatrix} v_x \\\\ v_y \\\\ 0 \\end{bmatrix}$$ Then, a 2D rigid\n",
     "transformation of both positions and directions is represented uniformly\n",
     "by a $3\\times 3$ matrix multiplication:\n",
-    "$$\\hat{T(\\V{x})} = \\begin{bmatrix}\n",
+    "$${T(\\hat\\V{x})} = \\begin{bmatrix}\n",
     "\\cos \\theta & -\\sin \\theta & t_x \\\\\n",
     "\\sin \\theta & \\cos \\theta & t_y \\\\\n",
     "0 & 0 & 1 \n",
@@ -676,7 +675,7 @@
     "In small 2D examples we can often treat coordinates casually, with our\n",
     "minds quickly filling in the gaps of meaning. However, once we introduce\n",
     "rotations, or move to 3D and beyond, this type of casual thinking runs\n",
-    "the risk of making Rosie the Robot walk Astro through a wall! It is\n",
+    "the risk of making the Robot walk through a wall! It is\n",
     "unlikely that your linear algebra software package (e.g., Matlab, or\n",
     "Numpy in Python) will help you guard against performing invalid\n",
     "operations, since you will be working with vector or matrix datatypes.\n",
@@ -691,7 +690,7 @@
     "### An illustrative example\n",
     "\n",
     "Let us start with a running example where a point $P$ is drawn on a\n",
-    "sheet of graph paper $G$. Some physical position is taken as as the\n",
+    "sheet of graph paper $G$. Some physical position is taken as the\n",
     "origin $O$ by convention, as are the axes $X$ and $Y$ which are attached\n",
     "to the graph paper. If we were to draw the straight line from $O$ to\n",
     "$P$, suppose the movement of the pen moves $p_x$ units in the $X$\n",
@@ -707,7 +706,7 @@
     "Let us also suppose that just before moving the paper, we have erased\n",
     "the arrow, and now we need to draw it again. If we recorded precisely\n",
     "how our arm moved between $O$ and $P$ when the line was originally\n",
-    "drawn, we cannot simply reproduce that arm movement (you know\\... like a\n",
+    "drawn, we can simply reproduce that arm movement (you know\\... like a\n",
     "robot) to draw $P$ again. We can see $O$ at the crossing of the axes, so\n",
     "we would simply need to find the new physical location of position $P$\n",
     "to end the arrow. Luckily, we can still use the values $(p_x,p_y)$ to\n",
@@ -718,7 +717,7 @@
     "and $Y$.\n",
     "\n",
     "More formally, the coordinate frame defined by the physical position $O$\n",
-    "and directions $X$ and $Y$ define a one-to-one correspondence between\n",
+    "and directions $X$ and $Y$ defines a one-to-one correspondence between\n",
     "every point $P$ on the paper and the vector of coordinates\n",
     "$(p_x,p_y) \\in \\Reals^2$. It would also be desirable to be able to say\n",
     "that $P = O + p_x X + p_y Y$, as this corresponds with our casual\n",
@@ -791,8 +790,9 @@
     "type of object being represented. Here, P indicates a position, D\n",
     "indicates a displacement, V indicates a direction, and c is a scalar.\n",
     "\n",
+    "\n",
     "| **Valid operations**                 | **Meaning**                                              |\n",
-    "| ------------------------------------ | -------------------------------------------------------- |\n",
+    "| :-: | :-: |\n",
     "| P - P = D                            | Calculating the displacement between points              |\n",
     "| P + D = P                            | Displacing a point by a displacement                     |\n",
     "| D + D = D                            | Calculating the displacement caused by two displacements |\n",
@@ -800,12 +800,13 @@
     "| D/‖D‖  = V if D ≠ 0                   | Finding the direction of a displacement                  |\n",
     "| c V = D                              | Scaling a direction to obtain a displacement             |\n",
     "\n",
+    "    \n",
     "Here, it is assumed that all items share the same coordinate frame.\n",
     "Operations on items not sharing the same coordinate frame are not\n",
     "meaningful, nor are the following types of operations:\n",
     "\n",
     "| **Invalid operations** | **Meaning**                   |\n",
-    "| ---------------------- | ----------------------------- |\n",
+    "| :-: | :-: |\n",
     "| c P                    | Scaling a point               |\n",
     "| P + P                  | Adding two points             |\n",
     "| V + V                  | Adding two directions         |\n",
@@ -909,7 +910,7 @@
     "each position or directional quantity consists of a vector $\\V{p}$\n",
     "stored alongside its annotation $A_p$. The annotation may include\n",
     "whether the quantity is positional or directional, as well as an\n",
-    "identifier of its coordinate frame. The system will also also store a\n",
+    "identifier of its coordinate frame. The system will also store a\n",
     "list of coordinate frames, represented in coordinates relative to some\n",
     "privileged frame (usually called the \"world frame\"). Such systems will\n",
     "allow users to query the coordinates of points and directions in\n",
