--- a/CoordinateTransformations.ipynb
+++ b/CoordinateTransformations.ipynb
@@ -1038,7 +1038,7 @@
     "    structure that stores two elements\n",
     "\n",
     "    -   `coords`: the point's coordinates, expressed in terms of its\n",
-    "        reference frame,\n",
+    "        reference frame.\n",
     "\n",
     "    -   `frame`: the name of its reference frame.\n",
     "\n",
