Chap4 4 5 not finished

--- a/3DRotations.ipynb
+++ b/3DRotations.ipynb
@@ -876,18 +876,19 @@
     "Note that these multiplication rules are non-symmetric. The product of\n",
     "two quaternions is a non-symmetric operation that is defined by applying\n",
     "standard distributive laws and the above rules:\n",
-    "$$\n",
+    "\\begin{equation*}\n",
     "\\begin{split}\n",
     "q p  = & (q_0 + i q_1 + j q_2 + k q_3) (p_0 + i p_1 + j p_2 + k p_3) \\\\\n",
     " = & q_0 (p_0 + i p_1 + j p_2 + k p_3) + i q_1 (p_0 + i p_1 + j p_2 + k p_3) + \\\\\n",
     "   & j q_2  (p_0 + i p_1 + j p_2 + k p_3)+ k q_3 (p_0 + i p_1 + j p_2 + k p_3) \\\\\n",
     " = & q_0 p_0 + i q_0 p_1 + j q_0 p_2 + k q_0 p_3 + i q_1 p_0 + i^2 q_1 p_1 + i j  q_1 p_2 + i k  q_1 p_3 + \\\\\n",
     "   & j q_2  p_0 + j i q_2 p_1 + j^2 q_2 p_2 + j k q_2 p_3 + k q_3 p_0 + k i  q_3 p_1 +  k j  q_3 p_2 + k^2  q_3 p_3 \\\\\n",
-    " = & (q_0 p_0 - q_1 p_1 - q_2 p_2 - p_3 p_3) + i (q_0 p_1 + q_1 p_0 + q_2 p_3 - q_3 p_2) + \\\\\n",
+    " = & (q_0 p_0 - q_1 p_1 - q_2 p_2 - q_3 p_3) + i (q_0 p_1 + q_1 p_0 + q_2 p_3 - q_3 p_2) + \\\\\n",
     "   & j (q_0 p_2 + q_2 p_0 - q_1 p_3 + q_3 p_1) + k (q_0 p_3 + q_3 p_0 + q_1 p_2 -  q_2 p_1)\n",
     "\\end{split}\n",
     "\\label{eq:QuaternionMultiplication}\n",
-    "$$ Norms are defined as usual so that\n",
+    "\\end{equation*}\n",
+    "Norms are defined as usual so that\n",
     "$|q| = \\sqrt{q_0^2 + q_1^2 + q_2^2 + q_3^2} = 1$ defines a unit\n",
     "quaternion. Unit quaternions have the special property that their\n",
     "inverse is simply the negation of their imaginary components:\n",
@@ -968,9 +969,9 @@
     "<div class=\"figcaption\"><a name=\"tab:RotationCheatSheet\">Rotation cheat sheet</a></div>\n",
     "\n",
     "| **Representation** | **Parameters** |\n",
-    "|:-------------------|:---------------|\n",
+    "|:-:| :-: |\n",
     "|  Matrix              | $3\\times 3$ matrix $R$ with 9 parameters, with 6 d.o.f. removed via orthogonality constraints. |\n",
-    "|  Euler angles:       | 3 parameters $(\\phi,\\theta,\\psi)$, in range $[0,2\\pi) \\times [-\\pi/2,\\pi/2] \\times [0,2\\pi)$ |\n",
+    "|  Euler angles       | 3 parameters $(\\phi,\\theta,\\psi)$, in range $[0,2\\pi) \\times [-\\pi/2,\\pi/2] \\times [0,2\\pi)$. |\n",
     "|  Axis-angle          | 3 + 1 parameters $(\\V{a},\\theta)$, in range $S_2 \\times [0,\\pi)$ with 1 d.o.f. removed via unit vector constraint $\\|V{a}\\| = 1$. |\n",
     "|  Rot. vector         | 3 parameters $\\V{m}$, in range $\\| \\V{m} \\| \\leq \\pi$. |\n",
     "|  Quaternion          | 4 parameters $(q_0,q_1,q_2,q_3)$, with 1 d.o.f. removed via unit quaternion constraint. |\n",
@@ -1063,7 +1064,7 @@
     "    $d(R_A,R_B)\\geq 0$, $d(R_A,R_B)=d(R_B,R_A)$. Do you think it\n",
     "    satisfies the triangle inequality\n",
     "    $d(R_A,R_B) \\leq d(R_A,R_C) + d(R_C,R_B)$ for all $R_C$? Why or why\n",
-    "    not? (Hint: consider what it means to be a geodesic)\n",
+    "    not? (Hint: consider what it means to be a geodesic.)\n",
     "\n"
    ]
   },
@@ -1074,7 +1075,7 @@
     "## Interactive examples\n",
     "\n",
     "The following interactive examples require Klampt-jupyter-extension and Klamp't to be installed on your system.  Instructions can be found at\n",
-    "[https://github.com/krishauser/Klampt-jupyter-extension](https://github.com/krishauser/Klampt-jupyter-extension)"
+    "[https://github.com/krishauser/Klampt-jupyter-extension](https://github.com/krishauser/Klampt-jupyter-extension)."
    ]
   },
   {
@@ -1087,7 +1088,7 @@
     "\n",
     "Notes:\n",
     "\n",
-    "- The axis of axis-angle rotations is specified with spherical coordinates $(\\phi,\\psi)$\n",
+    "- The axis of axis-angle rotations is specified with spherical coordinates $(\\phi,\\psi)$.\n",
     "\n",
     "- The quaternion components $(q_0,q_1,q_2,q_3)$ are labeled $(q_w,q_x,q_y,q_z)$. The sliders let you change the $q_x, q_y, q_z$ components, while the $q_w$ component is given by $\\sqrt{1 - q_x^2 - q_y^2 - q_z^2}$."
    ]
