Chap4 finished (5.2 small problems need to be fixed)

--- a/3DRotations.ipynb
+++ b/3DRotations.ipynb
@@ -570,7 +570,7 @@
     "$$\n",
     "\n",
     "where we use the shorthand $c_1 = \\cos \\phi$,\n",
-    "$c_2 = \\sin \\phi$, $c_2 = \\cos \\theta$, $s_2 = \\sin \\theta$,\n",
+    "$s_1 = \\sin \\phi$, $c_2 = \\cos \\theta$, $s_2 = \\sin \\theta$,\n",
     "$c_3 = \\cos \\psi$, and $s_3 = \\sin \\psi$.\n",
     "\n",
     "The simplest term is in the lower left corner, so we find one of the two\n",
