--- a/Kinematics.ipynb
+++ b/Kinematics.ipynb
@@ -323,10 +323,10 @@
     "\n",
     "#### Deriving the general-purpose formula\n",
     "\n",
-    "When the first joint rotates by angle $q_1$, the frame of the first link $T_1(q_1)$ is changed. $T_1(q_1)$ can be derived by observing how a point $X$ attached to $l_i$ would be moved. Let $\\V{x}_1$ be the coordinates of this point relative to the link's frame (augmented with a 1, in homogeneous coordinates).\n",
+    "When the first joint rotates by angle $q_1$, the frame of the first link $T_1(q_1)$ is changed. $T_1(q_1)$ can be derived by observing how a point $X$ attached to $l_i$ would be moved. Let $\\textbf{x}_1$ be the coordinates of this point relative to the link's frame (augmented with a 1, in homogeneous coordinates).\n",
     "\n",
-    "First, observe that relative to $l_1$'s reference frame, $X$ has coordinates $R(q_1)\\V{x}_1$ because the link was rotated about the origin:\n",
-    "$$\\V{x}_1^{ref} = R(q_{1}) \\V{x}_{1} = \\begin{bmatrix} {\\cos q_1} & {-\\sin q_1} & {0} \\\\ {\\sin q_1} & {\\cos q_1} & {0} \\\\ 0 & 0 & 1 \n",
+    "First, observe that relative to $l_1$'s reference frame, $X$ has coordinates $R(q_1)\\textbf{x}_1$ because the link was rotated about the origin:\n",
+    "$$\\textbf{x}_1^{ref} = R(q_{1}) \\textbf{x}_{1} = \\begin{bmatrix} {\\cos q_1} & {-\\sin q_1} & {0} \\\\ {\\sin q_1} & {\\cos q_1} & {0} \\\\ 0 & 0 & 1 \n",
     "\\end{bmatrix}.$$\n"
    ]
   },
@@ -337,40 +337,40 @@
     "\n",
     "Next, we can convert coordinates in $l_1$'s\n",
     "reference frame to the world via multiplication by $T_1^{ref}$ to obtain\n",
-    "the final value of $X$'s world coordinates, $\\V{x}_W$:\n",
-    "$$\\V{x}_W = T_1^{ref} R(q_1) \\V{x}_1.$$ We can now define\n",
+    "the final value of $X$'s world coordinates, $\\textbf{x}_W$:\n",
+    "$$\\textbf{x}_W = T_1^{ref} R(q_1) \\textbf{x}_1.$$ We can now define\n",
     "$T_1(q_1) \\equiv T_1^{ref} R(q_1)$ as the frame of link 1.\n",
     "\n",
     "Let us proceed to link 2, which moves in space as a function of both\n",
     "$q_1$ and $q_2$. Imagine $X$ now be a point attached to link 2, and let\n",
-    "$\\V{x}_2$ be its coordinates with respect to the link's frame. Due to\n",
+    "$\\textbf{x}_2$ be its coordinates with respect to the link's frame. Due to\n",
     "the serial nature of the chain, we can imagine first rotating link 2 by\n",
     "angle $q_2$ and then rotating link 1 by angle $q_1$. To perform this\n",
     "operation, let us proceed with the following order of transformations:\n",
     "\n",
     "1.  Rotate link 2, i.e, converts from link 2's moved frame to link 2's\n",
-    "    reference frame: $\\V{x}_2 \\rightarrow \\V{x}_2^{ref}$,\n",
+    "    reference frame: $\\textbf{x}_2 \\rightarrow \\textbf{x}_2^{ref}$,\n",
     "\n",
     "2.  Change coordinates to link 1, i.e., convert from link 2's reference\n",
-    "    frame to link 1's moved frame: $\\V{x}_2^{ref} \\rightarrow \\V{x}_1$,\n",
+    "    frame to link 1's moved frame: $\\textbf{x}_2^{ref} \\rightarrow \\textbf{x}_1$,\n",
     "\n",
     "3.  Apply link 1's transform, i.e., rotate link 1 and perform the change\n",
     "    of coordinates to the world frame: $V{x}_1 \\rightarrow V{x}_W$.\n",
     "\n",
     "As before the first transform consists of a rotation about the origin:\n",
-    "$$\\V{x}_2^{ref} = R(q_2) \\V{x}_2.$$ Next, we convert to link 1's\n",
+    "$$\\textbf{x}_2^{ref} = R(q_2) \\textbf{x}_2.$$ Next, we convert to link 1's\n",
     "coordinates. Note that those coordinates will be the same whether link 1\n",
     "is rotated or not, since the entire substructure after link 1 rotates in\n",
     "unison. As a result we can perform this change of coordinates at the\n",
     "reference configuration, which yields the following formula:\n",
-    "$$\\V{x}_1 = (T_1^{ref})^{-1} T_2^{ref} \\V{x}_2^{ref}$$ which first\n",
+    "$$\\textbf{x}_1 = (T_1^{ref})^{-1} T_2^{ref} \\textbf{x}_2^{ref}$$ which first\n",
     "changes from $T_2$'s reference frame to the world, then back to $T_1$'s\n",
     "reference frame.\n",
     "\n",
     "Finally, the third step is simply an application of $T_1(q_1)$ as\n",
-    "before: $$\\V{x}_W = T_1(q_1) \\V{x}_1.$$ Putting this all together, we\n",
+    "before: $$\\textbf{x}_W = T_1(q_1) \\textbf{x}_1.$$ Putting this all together, we\n",
     "obtain the equation:\n",
-    "$$\\V{x}_W = T_1(q_1) (T_1^{ref})^{-1} T_2^{ref} R(q_2) \\V{x}_2 = T_2(q_1,q_2) \\V{x}_2$$\n",
+    "$$\\textbf{x}_W = T_1(q_1) (T_1^{ref})^{-1} T_2^{ref} R(q_2) \\textbf{x}_2 = T_2(q_1,q_2) \\textbf{x}_2$$\n",
     "where $T_2(q_1,q_2) = T_1(q_1) (T_1^{ref})^{-1} T_2^{ref} R(q_2)$.\n",
     "\n",
     "Repeating this step down the chain, we find the following recursive\n",
@@ -445,7 +445,7 @@
     "If this were a 2R manipulator, and we wished to derive the coordinates\n",
     "of the end effector point, we simply apply this transform to the point\n",
     "$(L_2, 0, 1)$ to obtain:\n",
-    "$$T_2(q_1,q_2) \\begin{bmatrix}L_2 \\\\ 0 \\\\ 1 \\end{bmatrix} = \\begin{bmatrix} L_0 + c_1 L_1 + c_{12} L_2 \\\\ s_1 L_1 + s_{12}L_2 \\\\ 1 \\end{bmatrix}$$"
+    "$$T_2(q_1,q_2) \\begin{bmatrix}L_2 \\\\ 0 \\\\ 1 \\end{bmatrix} = \\begin{bmatrix} L_0 + c_1 L_1 + c_{12} L_2 \\\\ s_1 L_1 + s_{12}L_2 \\\\ 1 \\end{bmatrix}$$\n"
    ]
   },
   {
@@ -468,7 +468,7 @@
     "$c_{1,...,k} = \\cos(\\sum_{i=1}^k q_i)$ and\n",
     "$s_{1,...,k} = \\sin(\\sum_{i=1}^k q_i)$, we have the world coordinates of\n",
     "the end effector point given by:\n",
-    "$$T_n(\\V{q})\\begin{bmatrix}L_n \\\\ 0 \\\\ 1 \\end{bmatrix} = \\begin{bmatrix}L_0 \\\\ 0 \\\\ 1 \\end{bmatrix} + \\sum_{i=1}^n \\begin{bmatrix}L_i c_{1,\\ldots,i} \\\\ L_i s_{1,\\ldots,i} \\\\ 0 \\end{bmatrix}.$$"
+    "$$T_n(\\textbf{q})\\begin{bmatrix}L_n \\\\ 0 \\\\ 1 \\end{bmatrix} = \\begin{bmatrix}L_0 \\\\ 0 \\\\ 1 \\end{bmatrix} + \\sum_{i=1}^n \\begin{bmatrix}L_i c_{1,\\ldots,i} \\\\ L_i s_{1,\\ldots,i} \\\\ 0 \\end{bmatrix}.$$"
    ]
   },
   {
@@ -479,8 +479,7 @@
     "\n",
     "Branched robots can be handled by a similar formula, except additional\n",
     "bookkeeping is necessary to represent the robot's structure. We order\n",
-    "the parent and child of each joint with the convention that ea\n",
-    "ch link is\n",
+    "the parent and child of each joint with the convention that each link is\n",
     "the child of exactly one joint, and hence has only one parent. The\n",
     "parent of link $i$ is denoted $p[i]$, with the base link attached by a\n",
     "joint to the world, denoted by $p[i] = W$.\n",
@@ -498,7 +497,7 @@
     "To handle prismatic joints in 2D, we must modify the forward kinematics\n",
     "to replace the rotations $R(q_i)$ with a translation that depend on\n",
     "$q_i$. In addition to link lengths, we will also need to define the axis\n",
-    "of translation $\\V{a}_i = (a_{i,x},a_{i,y})$, with coordinates given\n",
+    "of translation $\\textbf{a}_i = (a_{i,x},a_{i,y})$, with coordinates given\n",
     "relative to the child link's frame.\n",
     "\n",
     "For those, we will replace the expression of $R(q_i)$ with the\n",
@@ -554,14 +553,14 @@
     "-   An indicator variable $z_i$ which is 1 if the joint is revolute, and\n",
     "    0 if the joint is prismatic.\n",
     "\n",
-    "-   The translational axis $\\V{a}_i$, given in link $i$'s local frame.\n",
+    "-   The translational axis $\\textbf{a}_i$, given in link $i$'s local frame.\n",
     "    (Ignored for revolute joints.)\n",
     "\n",
     "Then, the forward kinematics are defined by:\n",
-    "$$T_{i}(q) = T_{p[i]}(q) T_{i\\rightarrow p[i]}^{ref} L_{z_i,\\V{a}_i}(q_i)\n",
+    "$$T_{i}(q) = T_{p[i]}(q) T_{i\\rightarrow p[i]}^{ref} L_{z_i,\\textbf{a}_i}(q_i)\n",
     "\\label{eq:RecursiveForwardKinematicsGeneralized}$$ where $T_{W}(q)$ is\n",
-    "the identity and $L_{z_i,\\V{a}_i}(q_i)$ is the local joint transform\n",
-    "$$L_{z,\\V{a}}(q) = \n",
+    "the identity and $L_{z_i,\\textbf{a}_i}(q_i)$ is the local joint transform\n",
+    "$$L_{z,\\textbf{a}}(q) = \n",
     "\\begin{bmatrix}\n",
     "\\cos zq & -\\sin zq & (1-z) a_x q \\\\\n",
     "\\sin zq & \\cos zq & (1-z) a_y q \\\\\n",
@@ -574,21 +573,21 @@
     "($\\ref{eq:RecursiveForwardKinematicsGeneralized}$), except that\n",
     "homogeneous coordinate matrices are $4\\times 4$, and both prismatic and\n",
     "revolute joints must be defined according an axis\n",
-    "$\\V{a}_i = (a_{i,x},a_{i,y},a_{i,z})$. As before, this axis is specified\n",
+    "$\\textbf{a}_i = (a_{i,x},a_{i,y},a_{i,z})$. As before, this axis is specified\n",
     "in coordinates relative to the child link's frame.\n",
     "\n",
-    "In the case of a prismatic joint, we replace $L_{0,\\V{a}}(q_i)$ with the\n",
+    "In the case of a prismatic joint, we replace $L_{0,\\textbf{a}}(q_i)$ with the\n",
     "matrix:\n",
-    "$$L_{0,\\V{a}}(q_i) = \\left[\\begin{array}{cccc}\n",
+    "$$L_{0,\\textbf{a}}(q_i) = \\left[\\begin{array}{cccc}\n",
     "1 & 0 & 0 & a_{i,x} q_i \\\\\n",
     "0 & 1 & 0 & a_{i,y} q_i \\\\\n",
     "0 & 0 & 1 & a_{i,z} q_i \\\\\n",
     "0 & 0 & 0 & 1\n",
     "\\end{array}\\right].$$ In the case of a revolute joint, we use the\n",
     "axis-angle parametrization:\n",
-    "$$L_{1,\\V{a}}(q_i) = \\left[\\begin{array}{ccc|c}\n",
+    "$$L_{1,\\textbf{a}}(q_i) = \\left[\\begin{array}{ccc|c}\n",
     "  &                   &   & 0 \\\\\n",
-    "  & R_{aa}(\\V{a},q_i) &   & 0 \\\\\n",
+    "  & R_{aa}(\\textbf{a},q_i) &   & 0 \\\\\n",
     "  &                   &   & 0 \\\\\n",
     "\\hline\n",
     "0 & 0 & 0 & 1\n",
@@ -640,7 +639,7 @@
     "  &   &   & 0 \\\\\n",
     "\\hline\n",
     "0 & 0 & 0 & 1\n",
-    "\\end{array}\\right]$$ "
+    "\\end{array}\\right]$$\n"
    ]
   },
   {
@@ -678,15 +677,15 @@
     "$$T_3(q) = \n",
     "\\left[\\begin{array}{ccc|c}\n",
     "  &                  &   &   \\\\\n",
-    "  & R_z(q_1)R_y(q_2) &   & R_z(q_1)R_y(q_2)\\V{e}_1 q_3 \\\\\n",
+    "  & R_z(q_1)R_y(q_2) &   & R_z(q_1)R_y(q_2)\\textbf{e}_1 q_3 \\\\\n",
     "  &                  &   &    \\\\\n",
     "\\hline\n",
     "0 & 0 & 0 & 1\n",
     "\\end{array}\\right]$$ where again we have used block matrix\n",
-    "representation, and $\\V{e}_1 = (1,0,0)$. In other words, the origin of\n",
+    "representation, and $\\textbf{e}_1 = (1,0,0)$. In other words, the origin of\n",
     "the third frame is:\n",
     "$$T_3(q)\\left[\\begin{array}{c}0 \\\\ 0 \\\\ 0 \\\\ 1\\end{array}\\right] =\n",
-    "\\left[\\begin{array}{c} \\\\ R_z(q_1)R_y(q_2)\\V{e}_1 q_3  \\\\ \\\\ \\hline 1 \\end{array}\\right] =\n",
+    "\\left[\\begin{array}{c} \\\\ R_z(q_1)R_y(q_2)\\textbf{e}_1 q_3  \\\\ \\\\ \\hline 1 \\end{array}\\right] =\n",
     "\\left[\\begin{array}{c} c_1 c_2 q_3 \\\\ s_1 c_2 q_3 \\\\ -s_2 q_3 \\\\ 1 \\end{array}\\right].$$\n",
     "Note that the vertical component of this point is proportional to the\n",
     "*negative* of $\\sin q_2$, which may not be expected because $q_2$ could\n",
@@ -694,7 +693,7 @@
     "axis. The reason is that rotations about the $y$ axis rotate CCW about\n",
     "the $(z,x)$ plane, not the $(x,z)$ plane. To change the interpretation\n",
     "so that $q_2$ measures the elevation angle, the second axis of rotation\n",
-    "could be rotated so that $\\V{a}_2 = (0,-1,0)$, or equivalently, that the\n",
+    "could be rotated so that $\\textbf{a}_2 = (0,-1,0)$, or equivalently, that the\n",
     "reference transform $T_2^{ref}$ rotates $\\pi$ radians about either the\n",
     "$x$ or $z$ axis.\n",
     "\n",
@@ -703,7 +702,7 @@
     "As we defined the layout of a robot's kinematic structure above, we\n",
     "store the following parameters for each link $i=1,\\ldots,n$: parents\n",
     "$p[i]$, reference relative transforms $T_{i\\rightarrow p[i]}^{ref}$,\n",
-    "joint types $z_i$, and translational or rotational axes $\\V{a}_i$ .\n",
+    "joint types $z_i$, and translational or rotational axes $\\textbf{a}_i$ .\n",
     "\n",
     "However, our 2RP example showed that there are multiple choices of\n",
     "frames and axes that define the exact same robot dimensions. In fact,\n",
@@ -727,10 +726,10 @@
     "of the world frame, we could also eliminate the parameter $L_0$.\n",
     "\n",
     "In the case where prismatic joints are present, we only need represent\n",
-    "the direction of translation $\\V{a}_i$. But even these two parameters\n",
+    "the direction of translation $\\textbf{a}_i$. But even these two parameters\n",
     "are excessive, since directions are unit vectors. Hence, we can simply\n",
     "represent the heading angle $\\theta_i$ such that\n",
-    "$\\V{a}_i = (\\cos \\theta_i, \\sin \\theta_i)$.\n",
+    "$\\textbf{a}_i = (\\cos \\theta_i, \\sin \\theta_i)$.\n",
     "\n",
     "As a result, a minimum set of kinematic parameters for a 2D robot are\n",
     "the link lengths $L_1,\\ldots,L_n$ and the headings of any translational\n",
@@ -890,7 +889,7 @@
     "\n",
     "The most relevant elements to the kinematic structure of a robot are the\n",
     "origin and axis elements, which respectively give the reference\n",
-    "transform $T_{i}^{ref}$ and joint axis $\\V{a}_i$ (both in world\n",
+    "transform $T_{i}^{ref}$ and joint axis $\\textbf{a}_i$ (both in world\n",
     "coordinates).\n",
     "\n",
     "Besides revolute and prismatic types, joints can also be of a \"fixed\"\n",
@@ -912,7 +911,7 @@
     "Several software libraries, such as Klamp't and Orocos KDL, will compute\n",
     "forward kinematics for any robot specified in URDF format. As an example\n",
     "in Klamp't, the following code prints the end effector position of the\n",
-    "2R robot given above at the configuration $(\\pi/4,\\pi/4)$:"
+    "2R robot given above at the configuration $(\\pi/4,\\pi/4)$:\n"
    ]
   },
   {
@@ -1130,7 +1129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "code_folding": [
      0
@@ -1140,7 +1139,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "27948f2b648b42bb95ea82525cb12b8d",
+       "model_id": "5ae2d528ec2044fc897482f436520b05",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1154,7 +1153,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "44aabdaa824b4b93b4feec05afebf810",
+       "model_id": "fd8ae4b1832b492f8380221af57e4c06",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1214,7 +1213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "metadata": {
     "code_folding": [
      0
@@ -1222,9 +1221,16 @@
    },
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "***  klampt.vis: using Qt5 as the visualization backend  ***\n"
+     ]
+    },
+    {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ade51ddcd5e7442b9358ac10b8fd372c",
+       "model_id": "a2942de3b05d412a9674a7e824e2a101",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1238,7 +1244,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "059162a2485f4331af20a2e5ed19057a",
+       "model_id": "f664b21e4a5a4fd5bd3621de7256b7b4",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1297,9 +1303,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "cs498ir-virtualenv",
    "language": "python",
-   "name": "python3"
+   "name": "cs498ir-virtualenv"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1311,7 +1317,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.5"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
