--- a/InverseKinematics.ipynb
+++ b/InverseKinematics.ipynb
@@ -524,7 +524,7 @@
     "joint axes. The rotated $x$ coordinate is the term\n",
     "$\\sqrt{x_D^2 + y_D^2}$, and the rotated $z$ coordinate remains the same,\n",
     "$z_D$. In this rotated system, we can use the planar 2R solution to\n",
-    "calculate the possible values of $q_2$, and $q_3$. However, we should\n",
+    "calculate the possible values of $q_2$ and $q_3$. However, we should\n",
     "accommodate the fact that joints 2 and 3 rotate about the $y$ axis, and\n",
     "positive rotations about the $y$ axis causes a negative movement in $z$.\n",
     "Namely, we should compute all values of\n",
@@ -535,7 +535,7 @@
     "\n",
     "However, there is a small catch: we could have also modified $q_1$ by a\n",
     "factor of $\\pi$, giving a flipped coordinate system for the 2R solution\n",
-    "where the robot \"reaches backwards.\" As a result, there are 2 additional\n",
+    "where the robot \"reaches backwards\". As a result, there are 2 additional\n",
     "solutions:\n",
     "$$(q_2^\\prime,q_3^\\prime) \\in 2RIK(L_2,L_3,(-\\sqrt{x_D^2 + y_D^2},-z_D+L_1)).$$\n",
     "each associated with the value $q_1^\\prime = atan2(y_D,x_D) + \\pi$.\n",
@@ -571,7 +571,7 @@
     "the alternative solution\n",
     "$q_2^\\prime = \\pi - \\sin^{-1}(z_D/\\|\\textbf{x}_D\\|)$. Finally, we see the\n",
     "direction in $x-y$ plane is controlled by the first joint. So, $q_1$ can\n",
-    "be solved with $atan2(y_D/c_2,x_D/c_2)$ The exception is if\n",
+    "be solved with $atan2(y_D/c_2,x_D/c_2)$. The exception is if\n",
     "$x_D = y_D = 0$, in which any solution of $q_1$ works.\n",
     "\n",
     "### 3P3R manipulators (6-axis CNC) \n",
@@ -608,7 +608,7 @@
     "   0 & 0 & 1\n",
     "   \\end{array} \\right]\n",
     "   \\left[\\begin{array}{ccc}\n",
-    "   c_5 & 0 & s_5\\\\a\n",
+    "   c_5 & 0 & s_5\\\\\n",
     "   0 & 1 & 0\\\\\n",
     "   -s_5 & 0 & c_5\n",
     "   \\end{array} \\right]\n",
@@ -690,7 +690,7 @@
     "An end effector position for an industrial manipulator is also known as\n",
     "the *tool center point* . Since the origin of the last link's\n",
     "coordinates are inside its joint, the tool center point is defined by\n",
-    "some local coordinates $\\textbf{x}_6$ giving its offset from the last link,\n",
+    "some local coordinates $\\textbf{x}_6$ given its offset from the last link,\n",
     "which are measured or calibrated for any end effector attachment. From\n",
     "this information we define the world coordinates of the tool center\n",
     "point $$\\textbf{x}_{tcp}(\\textbf{q}) = T_6(\\textbf{q})\\textbf{x}_6$$ We wish to match\n",
@@ -734,7 +734,7 @@
     "Finding all solutions for redundant and parallel robots\n",
     "-------------------------------------------------------\n",
     "\n",
-    "In the case of redundant robots, we may wish to determine the some\n",
+    "In the case of redundant robots, we may wish to determine some\n",
     "representation of the entire IK solution set. This operation is also\n",
     "useful for determining the configuration space of parallel robots.\n",
     "\n",
@@ -939,8 +939,8 @@
     "$g_y(x)$ is defined as: $$g_y(x) \\equiv f(x,y)$$\n",
     "\n",
     "Similarly we can take the partial derivative with respect to $y$:\n",
-    "$$\\frac{\\partial f}{\\partial y}(x,y) = \\lim_{\\Delta y \\rightarrow 0} \\frac{f(x,y+\\Delta y) - f(x,y)}{\\Delta y} = \\frac{d}{dy}h_y(x)$$\n",
-    "where $h_y(x) \\equiv f(x,y)$.\n",
+    "$$\\frac{\\partial f}{\\partial y}(x,y) = \\lim_{\\Delta y \\rightarrow 0} \\frac{f(x,y+\\Delta y) - f(x,y)}{\\Delta y} = \\frac{d}{dy}h_x(y)$$\n",
+    "where $h_x(y) \\equiv f(x,y)$.\n",
     "\n",
     "In general, the partial derivative of a multi-argument function with\n",
     "respect to some argument is calculated by *treating the remaining\n",
